--- a/src/main/resources/templates/Docente/Documentosadd.html
+++ b/src/main/resources/templates/Docente/Documentosadd.html
@@ -52,7 +52,7 @@
                                                             </div>
 
                                                             <!--logo start-->
-                                                           <a class="logo">SGA <span class="lite">Academic</span></a>
+                                                            <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
                                                             <!--logo end-->
 
                                                             <div class="nav search-row" id="top_menu">
@@ -83,7 +83,7 @@
                                                                     <li class="sub-menu">
                                                                         <a href="javascript:;" class="">
                                                                             <i class="icon_document_alt"></i>
-                                                                            <span>Aula Virtual</span>
+                                                                            <span>Representados</span>
                                                                             <span class="menu-arrow arrow_carrot-right"></span>
                                                                         </a>
                                                                         <ul class="sub">
@@ -117,52 +117,56 @@
                                                             <section class="wrapper">
                                                                 <div class="row">
                                                                     <div class="col-lg-12">
-                                                                        <h3 class="page-header"><i class="fa fa fa-bars"></i> Tareas</h3>
+                                                                        <h3 class="page-header"><i class="fa fa fa-bars"></i> Docentes</h3>
                                                                     </div>
                                                                 </div>
                                                                 <!-- page start-->
                                                                 <div class="row">
                                                                     <div class="col-lg-12">
                                                                         <section class="panel">
-                                                                            <header class="panel-heading">
-                                                                                Tabla Tareas
-                                                                                <a th:href="@{/Stud/EntregaTareas/listar/(format=pdf)}" class="btn btn-danger position-relative float-end" title="Exportar a pdf" target="_blank">PDF</a>
-                                                                            </header>
-                                                                            
+                                                                            <h2 th:text="${titulo}">Section title</h2>
 
-                                                                            <table class="table table-striped table-advance table-hover">
-                                                                                <tbody>
-                                                                                    <tr>
-                                                                                        <th><i class="icon_check_alt2"></i>#</th>
-                                                                                        <th><i class="icon_profile"></i>codigo tarea docente</th>
-                                                                                        <th><i class="icon_profile"></i>Estudiante</th>
-                                                                                        <th><i class="icon_document_alt"></i>Asignatura</th>
-                                                                                        <th><i class="icon_document_alt"></i>Descripcion</th>
-                                                                                        <th><i class="icon_mail_alt"></i>Codigo envio de tarea</th>
-                                                                                        <th><i class="icon_calendar"></i>Archivo</th>
-                                                                                        <th><i class="icon_calendar"></i>Fecha de entrega</th>
-                                                                                        <th><i class="icon_cogs"></i>Opciones</th>
-                                                                                    </tr>
-                                                                                    <tr th:each="atv:${entregaT}">
-                                                                                        <td scope="row" th:text="${atv.identregatareas}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.codigotareadocente}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.idestudiante.apellidosestudiante}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.idasignatura.nombreasignatura}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.descripcion}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.codigoenviotarea}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.archivo}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.fechaentrega}">cuenta</td>
-                                                                                        <td>
-                                                                                            <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Archivo/Estudiante/subir/}+${atv.identregatareas}"><i class="icon_check_alt2"></i></a>
-                                                                                            </div>
-                                                                                        </td>
-                                                                                    </tr>
+                                                        <form class="form-control col-md-3" th:object="${documentos}" th:action="@{/Admin/Documentos/save}" method="post"> 
+                                                            <div class="form-group">
+                                                                <input th:field="*{iddocumento}" type="hidden"/>
+                                                                <label class="col-md-2" for="idtipodocumento">Tipo de Documento</label>
+                                                                 <select th:field="*{idtipodocumento}" class="form-control form-control-sm col-md-6">
+                                                                    <option th:each="tipousu:${tipodocumento}" th:value="${tipousu.idtipodocu}"
+                                                                            th:text="${tipousu.documento}"></option>
+                                                                </select>
+                                                            </div>
+                                                            <div class="form-group">
+                                                               
+                                                                <label class="col-md-2" for="descripcion">Descripcion </label>
+                                                                <input th:field="*{descripcion}" type="text" class="form-control form-control-sm col-md-6" placeholder="Apellidos Docente">
+                                                                    <small></small>
+                                                            </div>
+                                                            <div class="form-group">
+                                                                <label class="col-md-2" for="ceduladocente">Usuario</label>
+                                                               <select th:field="*{idusuario}" class="form-control form-control-sm col-md-3">
+                                                                    <option th:each="tipousu:${representante}" th:value="${tipousu.representanteid}"
+                                                                            th:text="${tipousu.apellidos}"></option>
+                                                                </select>
+                                                            </div>
+                                                            
+                                                             <div class="form-group">
+                                                                <label class="col-md-2" for="fechasubida">Fecha de Subida documento</label>
+                                                                <input  th:field="*{fechasubida}" type="date" class="form-control form-control-sm col-md-3">
+                                                                    <small></small>
+                                                             </div>
+                                                             <div class="form-group input-group mb-3">
+                                                                <input type="file" class="form-control" id="inputGroupFile02">
+  <label class="input-group-text" for="inputGroupFile02">Upload</label>
+                                                             </div>
+                                                             <br/>
+                                                            <input class="w-auto btn btn-lg btn-primary" type="submit" value="Guardar"/>
+                                                            <a th:href="@{/Admin/Documentos/listar}"><input class="w-auto btn btn-lg btn-primary" type="button" value="Cancelar"/></a>
+                                                        </form>
                                                                                     <!-- page end-->
                                                                                     </section>
                                                                                     </section>
                                                                                     <!--main content end-->
-
+                                                                                    
                                                                                     </section>
                                                                                     <!-- container section end -->
                                                                                     <!-- javascripts -->
