--- a/src/main/resources/templates/Docente/Documentoslist.html
+++ b/src/main/resources/templates/Docente/Documentoslist.html
@@ -52,7 +52,7 @@
                                                             </div>
 
                                                             <!--logo start-->
-                                                           <a class="logo">SGA <span class="lite">Academic</span></a>
+                                                            <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
                                                             <!--logo end-->
 
                                                             <div class="nav search-row" id="top_menu">
@@ -70,46 +70,96 @@
                                                         <!--header end-->
 
                                                         <!--sidebar start-->
-                                                        <aside>
-                                                            <div id="sidebar" class="nav-collapse ">
-                                                                <!-- sidebar menu start-->
-                                                                <ul class="sidebar-menu">
-                                                                    <li class="">
-                                                                        <a class="" th:action="@{/init}">
-                                                                            <i class="icon_house_alt"></i>
-                                                                            <span>Inicio</span>
-                                                                        </a>
-                                                                    </li>
-                                                                    <li class="sub-menu">
-                                                                        <a href="javascript:;" class="">
-                                                                            <i class="icon_document_alt"></i>
-                                                                            <span>Aula Virtual</span>
-                                                                            <span class="menu-arrow arrow_carrot-right"></span>
-                                                                        </a>
-                                                                        <ul class="sub">
-                                                                            <li><a class="" th:href="@{/Stud/NotasTareas/listar}">Notas</a></li>
-                                                                            <li><a class="" th:href="@{/Stud/EntregaTareas/listar}">Tareas</a></li>
-                                                                        </ul>
-                                                                    </li>
-                                                                    <li>
-                                                                        <a class="" th:href="@{/Stud/Docentes/listar}">
-                                                                            <i class="icon_genius"></i>
-                                                                            <span>Docentes</span>
-                                                                        </a>
-                                                                    </li>
-                                                                    <li>
-                                                                        <a class="" th:href="@{/Stu/Years/listar}">
-                                                                            <i class="icon_piechart"></i>
-                                                                            <span>Periodos</span>
+                                                      <aside>
+      <div id="sidebar" class="nav-collapse ">
+        <!-- sidebar menu start-->
+        <ul class="sidebar-menu">
+          <li class="active">
+            <a class="" th:href="@{/index}">
+                          <i class="icon_house_alt"></i>
+                          <span>Dashboard</span>
+                      </a>
+          </li>
+          <li class="sub-menu">
+            <a href="javascript:;" class="">
+                          <i class="icon_document_alt"></i>
+                          <span>Personas</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+            <ul class="sub">
+              <li><a class="" th:href="@{/docentes}">Docentes</a></li>
+              <li><a class="" th:href="@{/estudiantes}">Estudiantes</a></li>
+              <li><a class="" href="form_validation.html">Representnates</a></li>
+            </ul>
+          </li>
+          <li class="sub-menu">
+            <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>Tareas</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+            <ul class="sub">
+              <li><a class="" href="general.html">Enviar Tareas</a></li>
+              <li><a class="" href="buttons.html">Entrega Tareas</a></li>
+              <li><a class="" href="grids.html">Notas</a></li>
+            </ul>
+          </li>
+           <li class="sub-menu">
+            <a href="javascript:;" class="">
+                          <i class="icon_desktop"></i>
+                          <span>Documentos</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+            <ul class="sub">
+              <li><a class="" href="general.html">Representantes</a></li>
+              <li><a class="" href="buttons.html">Estudiantes</a></li>
+              <li><a class="" href="grids.html">Docentes</a></li>
+            </ul>
+          </li>
+          <li>
+          <li>
+            <a class="" href="chart-chartjs.html">
+                          <i class="icon_piechart"></i>
+                          <span>Matriculacion</span>
 
-                                                                        </a>
+                      </a>
 
-                                                                    </li>
+          </li>
 
-                                                                </ul>
-                                                                <!-- sidebar menu end-->
-                                                            </div>
-                                                        </aside>
+          <li class="sub-menu">
+            <a href="javascript:;" class="">
+                          <i class="icon_table"></i>
+                          <span>Escuela</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+            <ul class="sub">
+              <li><a class="" href="basic_table.html">Basic Table</a></li>
+              <li><a class="" href="basic_table.html">Basic Table</a></li>
+              <li><a class="" href="basic_table.html">Basic Table</a></li>
+              <li><a class="" href="basic_table.html">Basic Table</a></li>
+            </ul>
+              
+          </li>
+
+          <li class="sub-menu">
+            <a href="javascript:;" class="">
+                          <i class="icon_documents_alt"></i>
+                          <span>Pages</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+            <ul class="sub">
+              <li><a class="" href="profile.html">Profile</a></li>
+              <li><a class="" href="login.html"><span>Login Page</span></a></li>
+              <li><a class="" href="contact.html"><span>Contact Page</span></a></li>
+              <li><a class="" href="blank.html">Blank Page</a></li>
+              <li><a class="" href="404.html">404 Error</a></li>
+            </ul>
+          </li>
+
+        </ul>
+        <!-- sidebar menu end-->
+      </div>
+    </aside>
                                                         <!--sidebar end-->
 
                                                         <!--main content start-->
@@ -117,44 +167,42 @@
                                                             <section class="wrapper">
                                                                 <div class="row">
                                                                     <div class="col-lg-12">
-                                                                        <h3 class="page-header"><i class="fa fa fa-bars"></i> Tareas</h3>
+                                                                        <h3 class="page-header"><i class="fa fa fa-bars"></i> Documentos</h3>
                                                                     </div>
                                                                 </div>
                                                                 <!-- page start-->
                                                                 <div class="row">
                                                                     <div class="col-lg-12">
+                                                                        <a class="btn btn-success" th:href="@{/Admin/Documentos/create}" title="Bootstrap 3 themes generator">Nueva Documento</a>
                                                                         <section class="panel">
                                                                             <header class="panel-heading">
-                                                                                Tabla Tareas
-                                                                                <a th:href="@{/Stud/EntregaTareas/listar/(format=pdf)}" class="btn btn-danger position-relative float-end" title="Exportar a pdf" target="_blank">PDF</a>
+                                                                                Tabla Documentos
                                                                             </header>
-                                                                            
 
                                                                             <table class="table table-striped table-advance table-hover">
                                                                                 <tbody>
                                                                                     <tr>
+
                                                                                         <th><i class="icon_check_alt2"></i>#</th>
-                                                                                        <th><i class="icon_profile"></i>codigo tarea docente</th>
-                                                                                        <th><i class="icon_profile"></i>Estudiante</th>
-                                                                                        <th><i class="icon_document_alt"></i>Asignatura</th>
-                                                                                        <th><i class="icon_document_alt"></i>Descripcion</th>
-                                                                                        <th><i class="icon_mail_alt"></i>Codigo envio de tarea</th>
-                                                                                        <th><i class="icon_calendar"></i>Archivo</th>
-                                                                                        <th><i class="icon_calendar"></i>Fecha de entrega</th>
+                                                                                        
+                                                                                        <th><i class="icon_document_alt"></i>Tipo Documento</th>
+                                                                                        <th><i class="icon_mail_alt"></i>Descripcion</th>
+                                                                                        <th><i class="icon_mobile"></i>Documento Archivo</th>
+                                                                                        <th><i class="icon_phone"></i>Usuario</th>
+                                                                                        <th><i class="icon_map"></i>Fecha Subida</th>
                                                                                         <th><i class="icon_cogs"></i>Opciones</th>
                                                                                     </tr>
-                                                                                    <tr th:each="atv:${entregaT}">
-                                                                                        <td scope="row" th:text="${atv.identregatareas}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.codigotareadocente}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.idestudiante.apellidosestudiante}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.idasignatura.nombreasignatura}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.descripcion}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.codigoenviotarea}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.archivo}">cuenta</td>
-                                                                                        <td scope="row" th:text="${atv.fechaentrega}">cuenta</td>
+                                                                                   <tr th:each="atv:${documentos}">
+              <td scope="row" th:text="${atv.iddocumento}">cuenta</td>
+              <td scope="row" th:text="${atv.idtipodocumento.documento}">cuenta</td>
+              <td th:text="${atv.descripcion}">data</td>
+              <td th:text="${atv.documento}">placeholder</td>
+              <td th:text="${atv.idusuario}">placeholder</td>
+              <td th:text="${atv.fechasubida}">placeholder</td>
                                                                                         <td>
                                                                                             <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Archivo/Estudiante/subir/}+${atv.identregatareas}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-success" th:href="@{/Admin/Documentos/edit/}+${atv.iddocumento}"><i class="icon_check_alt2"></i></a>
+                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Documentos/delete}+${atv.iddocumento}"><i class="icon_check_alt2"></i></a>
                                                                                             </div>
                                                                                         </td>
                                                                                     </tr>
@@ -162,7 +210,7 @@
                                                                                     </section>
                                                                                     </section>
                                                                                     <!--main content end-->
-
+                                                                                    
                                                                                     </section>
                                                                                     <!-- container section end -->
                                                                                     <!-- javascripts -->
