--- a/src/main/resources/templates/Representante/index.html
+++ b/src/main/resources/templates/Representante/index.html
@@ -1,144 +1,155 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en"
       xmlns="http://www.w3.org/1999/xhtml" 
     xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
-    <meta name="generator" content="Hugo 0.84.0">
-    <title>System Academic SGA</title>
 
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/dashboard/">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
+  <meta name="author" content="GeeksLabs">
+  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
+  <link rel="shortcut icon" th:href="@{/img/favicon.png}">
 
-    
+  <title>Blank | Creative - Bootstrap 3 Responsive Admin Template</title>
 
-    <!-- Bootstrap core CSS -->
-<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+  <link rel="canonical" href="https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/">
+  <!-- Bootstrap CSS -->
+  <link th:href="@{/css/bootstrapNEW.min.css}" rel="stylesheet">
+  <!-- bootstrap theme -->
+  <link th:href="@{/css/bootstrapNEW-theme.css}" rel="stylesheet">
+  <!--external css-->
+  <!-- font icon -->
+  <link th:href="@{/css/elegant-icons-styleNEW.css}" rel="stylesheet" />
+  <link th:href="@{/css/font-awesomeNEW.min.css}" rel="stylesheet" />
+  <!-- Custom styles -->
+  <link th:href="@{/css/styleNEW.css}" rel="stylesheet">
+  <link th:href="@{/css/style-responsiveNEW.css}" rel="stylesheet" />
 
-    <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
+  <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
+  <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+      <script src="js/respond.min.js"></script>
+      <script src="js/lte-ie7.js"></script>
+    <![endif]-->
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
-    </style>
+    <!-- =======================================================
+      Theme Name: NiceAdmin
+      Theme URL: https://bootstrapmade.com/nice-admin-bootstrap-admin-html-template/
+      Author: BootstrapMade
+      Author URL: https://bootstrapmade.com
+    ======================================================= -->
+</head>
 
-    
-    <!-- Custom styles for this template -->
-    <link th:href="@{/css/dashboard.css}" rel="stylesheet">
-  </head>
-  <body>
-    
-<header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-  <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3" th:href="@{/}">Company name</a>
-  <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-  <div class="navbar-nav">
-    <div class="nav-item text-nowrap">
-      <a class="nav-link px-3" th:href="@{/logout}">Sign out</a>
-    </div>
-  </div>
-</header>
+<body>
+  <!-- container section start -->
+  <section id="container" class="">
+    <!--header start-->
 
-<div class="container-fluid">
-  <div class="row">
-   
-
-    <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        
-        <h1 class="h2" th:text="${use}+': '+${userr}">Dashboard</h1>
-        <div class="btn-toolbar mb-2 mb-md-0">
-          <div class="btn-group me-2">
-            <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-            <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-          </div>
-          <select>
-            <option>2021-2022</option>
-            <option>2022-2023</option>
-            <option>2023-2024</option>
-          </select>
-        </div>
+    <header class="header dark-bg">
+      <div class="toggle-nav">
+        <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"><i class="icon_menu"></i></div>
       </div>
 
-     <div class="album py-5 bg-light">
-    <div class="container">
+      <!--logo start-->
+      <a class="logo">SGA <span class="lite">Academic</span></a>
+      <!--logo end-->
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">Tareas.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/Repre/EntregaTareas/listar}">View</a>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-              
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">Notas.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/Repre/NotasTareas/listar}">View</a>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">Matriculacion.</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                    <a type="button" class="btn btn-sm btn-outline-secondary" th:href="@{/Repre/Matriculacion/listar}">View</a>
-                  <a type="button" class="btn btn-sm btn-outline-secondary">Edit</a>
-                </div>
-                
-              </div>
-            </div>
-          </div>
-        </div>
+      <div class="nav search-row" id="top_menu">
+        <!--  search form start -->
+        <ul class="nav top-menu">
+          <li>
+            <form class="navbar-form">
+              <input class="form-control" placeholder="Search" type="text">
+            </form>
+          </li>
+        </ul>
+        <!--  search form end -->
       </div>
+    </header>
+    <!--header end-->
+
+    <!--sidebar start-->
+    <aside>
+      <div id="sidebar" class="nav-collapse ">
+        <!-- sidebar menu start-->
+        <ul class="sidebar-menu">
+          <li class="">
+            <a class="" th:action="@{/init}">
+                          <i class="icon_house_alt"></i>
+                          <span>Inicio</span>
+                      </a>
+          </li>
+          <li>
+            <a class="" th:href="@{/Repre/Matriculacion/listar}">
+                          <i class="icon_genius"></i>
+                          <span>Matriculacion</span>
+                      </a>
+          </li>
+          <li>
+          <li>
+            <a class="" th:href="@{/Repre/NotasTareas/listar}">
+                          <i class="icon_genius"></i>
+                          <span>Notas</span>
+                      </a>
+          </li>
+          <li>
+            <a class="" th:href="@{/Repre/EntregaTareas/listar}">
+                          <i class="icon_piechart"></i>
+                          <span>Tareas</span>
+
+                      </a>
+
+          </li>
+
+        </ul>
+        <!-- sidebar menu end-->
+      </div>
+    </aside>
+    <!--sidebar end-->
+
+    <!--main content start-->
+    <section id="main-content">
+      <section class="wrapper">
+        <div class="row">
+          <div class="col-lg-12">
+            <h3 class="page-header"><i class="fa fa fa-bars"></i> Pages</h3>
+            <ol class="breadcrumb">
+              <li><i class="fa fa-home"></i><a th:action="@{/init}">Home</a></li>
+              <li><i class="fa fa-bars"></i>Pages</li>
+              <li><i class="fa fa-square-o"></i>Pages</li>
+            </ol>
+          </div>
+        </div>
+        <!-- page start-->
+        Bienvenido Representante
+        <!-- page end-->
+      </section>
+    </section>
+    <!--main content end-->
+    <div class="text-right">
+      <div class="credits">
+          <!--
+            All the links in the footer should remain intact.
+            You can delete the links only if you purchased the pro version.
+            Licensing information: https://bootstrapmade.com/license/
+            Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+          -->
+          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        </div>
     </div>
-  </div>
+  </section>
+  <!-- container section end -->
+  <!-- javascripts -->
+  <script th:src="@{/js/jquery.js}"></script>
+  <script th:src="@{/js/bootstrap.min.js}"></script>
+  <!-- nice scroll -->
+  <script th:src="@{/js/jquery.scrollTo.min.js}"></script>
+  <script th:src="@{/js/jquery.nicescroll.js}" type="text/javascript"></script>
+  <!--custome script for all page-->
+  <script th:src="@{/js/scripts.js}"></script>
 
-     
-      
-    </main>
-  </div>
-</div>
 
+</body>
 
-    <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-    <script th:src="@{/js/bootstrap.js}"></script>
-
-      <script th:src="@{https://cdn.jsdelivr.net/npm/feather-icons@4.28.0/dist/feather.min.js}" integrity="sha384-uO3SXW5IuS1ZpFPKugNNWqTZRRglnUJK6UAZ/gxOX80nxEkN9NcGZTftn6RzhGWE" crossorigin="anonymous"></script><script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" integrity="sha384-zNy6FEbO50N+Cg5wap8IKA4M/ZnLJgzc6w2NqACZaK0u0FXfOWRRJOnQtpZun8ha" crossorigin="anonymous"></script><script src="dashboard.js"></script>
-  </body>
 </html>
