--- a/src/main/resources/templates/Student/Docenteslist.html
+++ b/src/main/resources/templates/Student/Docenteslist.html
@@ -52,7 +52,7 @@
                                                             </div>
 
                                                             <!--logo start-->
-                                                            <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
+                                                            <a class="logo">SGA <span class="lite">Academic</span></a>
                                                             <!--logo end-->
 
                                                             <div class="nav search-row" id="top_menu">
@@ -83,7 +83,7 @@
                                                                     <li class="sub-menu">
                                                                         <a href="javascript:;" class="">
                                                                             <i class="icon_document_alt"></i>
-                                                                            <span>Representados</span>
+                                                                            <span>Aula Virtual</span>
                                                                             <span class="menu-arrow arrow_carrot-right"></span>
                                                                         </a>
                                                                         <ul class="sub">
@@ -126,6 +126,7 @@
                                                                         <section class="panel">
                                                                             <header class="panel-heading">
                                                                                 Tabla Docente
+                                                                                <a th:href="@{/Stud/Docentes/listar/(format=pdf)}" class="btn btn-danger position-relative float-end" title="Exportar a pdf" target="_blank">PDF</a>
                                                                             </header>
 
                                                                             <table class="table table-striped table-advance table-hover">
@@ -140,7 +141,7 @@
                                                                                         <th><i class="icon_mobile"></i># Celular</th>
                                                                                         <th><i class="icon_phone"></i># Telefono</th>
                                                                                         <th><i class="icon_map"></i>Direccion</th>
-                                                                                        <th><i class="icon_cogs"></i>Opciones</th>
+                                                                                        
                                                                                     </tr>
                                                                                     <tr th:each="atv:${docente}">
                                                                                         <td scope="row" th:text="${atv.iddocente}">cuenta</td>
@@ -151,12 +152,7 @@
                                                                                         <td th:text="${atv.celulardocente}">placeholder</td>
                                                                                         <td th:text="${atv.telefonodocente}">placeholder</td>
                                                                                         <td th:text="${atv.direcciondocente}">placeholder</td>
-                                                                                        <td>
-                                                                                            <div class="btn-group">
-                                                                                                <a class="btn btn-success" th:href="@{/Admin/Docentes/edit/}+${atv.iddocente}"><i class="icon_check_alt2"></i></a>
-                                                                                                <a class="btn btn-danger" th:href="@{/Admin/Docentes/delete}+${atv.iddocente}"><i class="icon_check_alt2"></i></a>
-                                                                                            </div>
-                                                                                        </td>
+                                                                                        
                                                                                     </tr>
                                                                                     <!-- page end-->
                                                                                     </section>
