--- a/src/main/resources/templates/Student/NotaTareaslist.html
+++ b/src/main/resources/templates/Student/NotaTareaslist.html
@@ -52,7 +52,7 @@
                                                             </div>
 
                                                             <!--logo start-->
-                                                            <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
+                                                           <a  class="logo">SGA <span class="lite">Academic</span></a>
                                                             <!--logo end-->
 
                                                             <div class="nav search-row" id="top_menu">
@@ -83,7 +83,7 @@
                                                                     <li class="sub-menu">
                                                                         <a href="javascript:;" class="">
                                                                             <i class="icon_document_alt"></i>
-                                                                            <span>Representados</span>
+                                                                            <span>Aula Virtual</span>
                                                                             <span class="menu-arrow arrow_carrot-right"></span>
                                                                         </a>
                                                                         <ul class="sub">
@@ -126,6 +126,7 @@
                                                                         <section class="panel">
                                                                             <header class="panel-heading">
                                                                                 Tabla Notas
+                                                                                <a th:href="@{/Stud/NotasTareas/listar/(format=pdf)}" class="btn btn-danger position-relative float-end" title="Exportar a pdf" target="_blank">PDF</a>
                                                                             </header>
 
                                                                             <table class="table table-striped table-advance table-hover">
@@ -133,7 +134,7 @@
                                                                                     <tr>
 
                                                                                         <th><i class="icon_check_alt2"></i>#</th>
-                                                                                        <th><i class="icon_document_alt"></i>Nombre Nivel</th>
+                                                                                        <th><i class="icon_document_alt"></i>Nombre Tarea</th>
                                                                                         <th><i class="icon_document_alt"></i>Notas</th>
 
                                                                                     </tr>
