--- a/src/main/resources/templates/Student/index.html
+++ b/src/main/resources/templates/Student/index.html
@@ -52,7 +52,7 @@
       </div>
 
       <!--logo start-->
-      <a href="@{/init}" class="logo">Nice <span class="lite">Admin</span></a>
+      <a class="logo">SGA <span class="lite">Academic</span></a>
       <!--logo end-->
 
       <div class="nav search-row" id="top_menu">
@@ -83,7 +83,7 @@
           <li class="sub-menu">
             <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
-                          <span>Representados</span>
+                          <span>Aula Virtual</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
             <ul class="sub">
